@@ -192,3 +192,4 @@ T_343m2ts_interlaced_h264_match_of_the_day:fdab49f2f33981826793bb66aab97ca5:pass
 T_344microdvd_recognition:ok:passed:20120304-175209:0.082792556
 T_345flag_enabled:efe07b85cd349a040ed79402256bd6ea-89e9b90881c73d55ac4eda07e20effe5:passed:20120304-181150:0.135757829
 T_347h264_misdetected_as_ac3:4dcd5541b962ce1d534e04481deadbec:passed:20120305-160017:2.617159557
+T_348srt_negative_timecodes2:4fc486c9de77896d9f8c2cf997d88d8c:passed:20120307-115726:0.085988974
