@@ -1,3 +1,8 @@
+2012-03-07  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: SRT subtitles: timecodes can contain the
+	minus sign before any digit, not just before the first one.
+
 2012-03-05  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: Sometimes non-AC3 files were mistakenly for
